src/styles/main.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

body {
  font-family: 'Poppins', sans-serif;
  color: #303030;
  scroll-behavior: smooth;
  font-size: 14px;
  font-weight: 500;
}

div,
input,
textarea,
button,
select,
a {
  -webkit-tap-highlight-color: transparent;
}

img,
video {
  max-width: 100%;
}

th {
  background: #f5f5f7 !important;
}

td {
  color: rgba(76, 78, 100, 0.68);
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type='number'] {
  -moz-appearance: textfield;
}

.input-container {
  position: relative;
  width: 100%;
}

.input-label {
  position: absolute;
  font-size: 0.9rem;
  left: 10px;
  top: -8px;
  background-color: white;
  padding: 0 4px;
  z-index: 1;
  line-height: 1.2;
}

.ep-button {
  margin-left: 0 !important;
}

.ep-table {
  width: 100%;
  font-size: 12px;
}

.ep-input__wrapper {
  border-radius: 8px !important;
  -webkit-border-radius: 8px !important;
  -moz-border-radius: 8px !important;
  -ms-border-radius: 8px !important;
  -o-border-radius: 8px !important;
}

.ep-input--large .ep-input__wrapper {
  padding: 2px 16px !important;
}

.ep-select__wrapper {
  border-radius: 8px !important;
  -webkit-border-radius: 8px !important;
  -moz-border-radius: 8px !important;
  -ms-border-radius: 8px !important;
  -o-border-radius: 8px !important;
}

.ep-select--large .ep-select__wrapper {
  padding: 14px 16px !important;
}

.ep-input.is-disabled .ep-input__wrapper {
  background-color: white !important;
}

.ep-checkbox.ep-checkbox--large .ep-checkbox__inner {
  margin-top: 3px !important;
}

.ep-button.is-plain.outline {
  --ep-button-text-color: var(--ep-color-primary);
  --ep-button-bg-color: var(--ep-fill-color-blank);
  --ep-button-border-color: var(--ep-color-primary);
}

